--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         </div>
 
         <div id="screen5" class="hidden">
-            <h2>Enter Your M-Pesa Confirmation Message</h2>
+            <h2>Enter Your Bank Confirmation Message</h2>
             <textarea id="confirmationMessage" rows="4" placeholder="Paste your M-Pesa message here..."></textarea>
             <p id="confirmationWarning" class="warning hidden">Confirmation message is required</p>
             <p id="warningMessage" class="warning hidden"></p>
